Remove this file to the project directory to meet the requirements